# G-AI

./: .gitignore  GITHUB_SETUP.md  LICENSE  QUICK_START.md  README.md  run_backend.py  start.sh  start_backend.sh  start_frontend.sh  stop.sh
backend/: .env.example  .gitignore  GEMINI_INTEGRATION.md  INTENT_API.md  START.md  pyproject.toml  requirements.txt  run.py
backend/app/: main.py  random_brothers_miss.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: beggar_brain.py  intent_router.py  llm_service.py
backend/doc/: API_ANALYSIS.md  ENV_SETUP.md  UNIFIED_INTENT.md
frontend/: codes.html  companions.html  companions_副本.html  console.html  goods.html  index.html  knowledge.html  loader.js  prompts.html
